Fix for https://bugs.webkit.org/show_bug.cgi?id=57286 Alternative fix for: Horizontal scroller stops appearing after going Forward -and corresponding- <rdar://problem/9026946>

Reviewed by Darin Adler.

This patch rolls out revision 79053 and fixes the same bug in a  better way.

New function resetScrollbarsAndClearContentsSize() calls resetScrollbars() and then
sets the contents size to 0. This is called when a document is going into the page
cache.
* dom/Document.cpp:
(WebCore::Document::setInPageCache):
(WebCore::FrameView::resetScrollbarsAndClearContentsSize):

Roll-out of 79053.
* history/CachedFrame.cpp:
(WebCore::CachedFrameBase::restore):
* page/FrameView.cpp:
(WebCore::FrameView::FrameView):
(WebCore::FrameView::reset):
(WebCore::FrameView::layout):
* page/FrameView.h:



Canonical link: https://commits.webkit.org/71987@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82185 268f45cc-cd09-0410-ab3c-d52691b4dbfc