Source/WebCore/history/CachedFrame.cpp
@@ -83,8 +83,6 @@ void CachedFrameBase::restore()
 {
     ASSERT(m_document->view() == m_view);
 
-    m_view->setIsRestoringFromBackForward(true);
-
     Frame* frame = m_view->frame();
     m_cachedFrameScriptData->restore(frame);
 
